Add default params to service now

--- a/assets/json/channels/servicenow.json
+++ b/assets/json/channels/servicenow.json
@@ -1,5 +1,5 @@
 {
-  "_id": "38485738592h9385wp3i4",
+  "_id": "414b15ec6a144bcfae24ed008d5c15b7",
   "__v": 0,
   "type": "channel:service-now",
   "auth_strategy": "oauth",
@@ -26,16 +26,25 @@
       "tokenMethod": ""
     }
   },
+  "defaultParams": [
+    {
+      "name": ":instance",
+      "displayName": "Instance Name",
+      "style": "url",
+      "type": "string",
+      "required": true
+    }
+  ],
   "application": {
-    "base": "https://myinstance.service-now.com",
+    "base": "https://:instance.service-now.com",
     "resources": [
       {
         "path": "/api/now/v1/table/:tableName",
         "displayName": "Gets Records For Specified Table",
         "doc": {
-          "url": "https://myinstance.service-now.com/api/now/v1/table/:tableName"
+          "url": "https://:instance.service-now.com/api/now/v1/table/:tableName"
         },
-        "httpMethod": "Get",
+        "httpMethod": "GET",
         "params": [
           {
             "displayName": "Table Name",
@@ -43,62 +52,71 @@
             "type": "string",
             "name": ":tableName",
             "required": true
-          },{
+          },
+          {
             "displayName": "Sysparm Query",
             "style": "query",
             "type": "string",
             "name": "sysparm_query"
-          },{
+          },
+          {
             "displayName": "Sysparm Display Value",
             "style": "query",
             "type": "string",
             "name": "sysparm_display_value"
-          },{
+          },
+          {
             "displayName": "Sysparm Fields",
             "style": "query",
             "type": "string",
             "name": "sysparm_fields"
-          },{
+          },
+          {
             "displayName": "Sysparm Fields",
             "style": "query",
             "type": "string",
             "name": "sysparm_fields"
-          },{
+          },
+          {
             "displayName": "Sysparm View",
             "style": "query",
             "type": "string",
             "name": "sysparm_view"
-          },{
+          },
+          {
             "displayName": "Sysparm Limit",
             "style": "query",
             "type": "string",
             "name": "sysparm_limit"
-          },{
+          },
+          {
             "displayName": "Sysparm Exclude Reference Link",
             "style": "query",
             "type": "string",
             "name": "sysparm_exclude_reference_link"
-          },{
+          },
+          {
             "displayName": "Sysparm Read Replica Category",
             "style": "query",
             "type": "string",
             "name": "sysparm_read_replica_category"
-          },{
+          },
+          {
             "displayName": "Filter Query Using Key-Value Pairs",
             "style": "query",
             "type": "string",
             "name": "Key-Value Pairs"
           }
         ],
-        "url": "https://myinstance.service-now.com/api/now/v1/table/:tableName"
+        "url": "https://:instance.service-now.com/api/now/v1/table/:tableName"
       },
       {
         "path": "/api/now/v1/table/:tableName",
         "displayName": "Inserts One Record In Specified Table",
         "doc": {
-          "url": "https://myinstance.service-now.com/api/now/v1/table/:tableName"
+          "url": "https://:instance.service-now.com/api/now/v1/table/:tableName"
         },
-        "httpMethod": "Post",
+        "httpMethod": "POST",
         "params": [
           {
             "displayName": "Tabel Name",
@@ -106,248 +124,240 @@
             "type": "string",
             "name": ":tableName",
             "required": true
-          },{
+          },
+          {
             "displayName": "Sysparm Display Value",
             "style": "body",
             "type": "string",
             "name": "sysparm_display_value"
-          },{
+          },
+          {
             "displayName": "Sysparm Fields",
             "style": "body",
             "type": "string",
             "name": "sysparm_fields"
-          },{
+          },
+          {
             "displayName": "Sysparm View",
             "style": "body",
             "type": "string",
             "name": "sysparm_view"
-          },{
+          },
+          {
             "displayName": "Sysparm Exclude Reference Link",
             "style": "body",
             "type": "context object",
             "name": "sysparm_exclude_reference_link"
-          },{
+          },
+          {
             "displayName": "Sysparm Input Display Value",
             "style": "body",
             "type": "string",
             "name": "sysparm_input_display_value"
           }
         ],
-        "url": "https://myinstance.service-now.com/api/now/v1/table/:tableName"
+        "url": "https://:instance.service-now.com/api/now/v1/table/:tableName"
       },
       {
         "path": "/api/now/v1/table/:tableName/:sys_id",
         "displayName": "Gets The Record Identified By Specified Sys_id",
         "doc": {
-          "url": "https://myinstance.service-now.com/api/now/v1/table/:tableName/:sys_id"
+          "url": "https://:instance.service-now.com/api/now/v1/table/:tableName/:sys_id"
         },
-        "httpMethod": "Get",
-        "params": [{
+        "httpMethod": "GET",
+        "params": [
+          {
             "displayName": "Tabel Name",
             "style": "URL",
             "type": "string",
             "name": ":tableName",
             "required": true
-          },{
+          },
+          {
             "displayName": "Sys ID",
             "style": "URL",
             "type": "string",
             "name": ":sys_id",
             "required": true
-          },{
+          },
+          {
             "displayName": "Sysparm Display Value",
             "style": "query",
             "type": "string",
             "name": "sysparm_display_value"
-          },{
+          },
+          {
             "displayName": "Sysparm Fields",
             "style": "query",
             "type": "context object",
             "name": "sysparm_fields"
-          },{
+          },
+          {
             "displayName": "Sysparm View",
             "style": "query",
             "type": "string",
             "name": "sysparm_view"
-          },{
+          },
+          {
             "displayName": "Sysparm Exclude Reference Link",
             "style": "query",
             "type": "string",
             "name": "sysparm_exclude_reference_link"
-          }],
-        "url": "https://myinstance.service-now.com/api/now/v1/table/:tableName/:sys_id"
+          }
+        ],
+        "url": "https://:instance.service-now.com/api/now/v1/table/:tableName/:sys_id"
       },
       {
         "path": "/api/now/v1/table/:tableName/:sys_id",
         "displayName": "Updates Specified Record With Request Body",
         "doc": {
-          "url": "https://myinstance.service-now.com/api/now/v1/table/:tableName/:sys_id"
+          "url": "https://:instance.service-now.com/api/now/v1/table/:tableName/:sys_id"
         },
-        "httpMethod": "Put",
-        "params": [{
+        "httpMethod": "PUT",
+        "params": [
+          {
             "displayName": "Tabel Name",
             "style": "URL",
             "type": "string",
             "name": ":tableName",
             "required": true
-          },{
+          },
+          {
             "displayName": "Sys ID",
             "style": "URL",
             "type": "string",
             "name": ":sys_id",
             "required": true
-          },{
+          },
+          {
             "displayName": "Sysparm Display Value",
             "style": "body",
             "type": "string",
             "name": "sysparm_display_value"
-          },{
+          },
+          {
             "displayName": "Sysparm Fields",
             "style": "body",
             "type": "string",
             "name": "sysparm_fields"
-          },{
+          },
+          {
             "displayName": "Sysparm View",
             "style": "body",
             "type": "string",
             "name": "sysparm_view"
-          },{
+          },
+          {
             "displayName": "Sysparm Exclude Reference Link",
             "style": "body",
             "type": "string",
             "name": "sysparm_exclude_reference_link"
-          },{
+          },
+          {
             "displayName": "Sysparm Input Display Value",
             "style": "body",
             "type": "string",
             "name": "sysparm_input_display_value"
-          }],
-        "url": "https://myinstance.service-now.com/api/now/v1/table/:tableName/:sys_id"
+          }
+        ],
+        "url": "https://:instance.service-now.com/api/now/v1/table/:tableName/:sys_id"
       },
       {
         "path": "/api/now/v1/table/:tableName/:sys_id",
         "displayName": "Updates Specified Record With The Request Body",
         "doc": {
-          "url": "https://myinstance.service-now.com/api/now/v1/table/:tableName/:sys_id"
+          "url": "https://:instance.service-now.com/api/now/v1/table/:tableName/:sys_id"
         },
         "httpMethod": "Patch",
-        "params": [{
+        "params": [
+          {
             "displayName": "Tabel Name",
             "style": "URL",
             "type": "string",
             "name": ":tableName",
             "required": true
-          },{
+          },
+          {
             "displayName": "Sys ID",
             "style": "URL",
             "type": "string",
             "name": ":sys_id",
             "required": true
-          },{
+          },
+          {
             "displayName": "Sysparm Display Value",
             "style": "body",
             "type": "string",
             "name": "sysparm_display_value"
-          },{
+          },
+          {
             "displayName": "Sysparm Fields",
             "style": "body",
             "type": "string",
             "name": "sysparm_fields"
-          },{
+          },
+          {
             "displayName": "Sysparm View",
             "style": "body",
             "type": "string",
             "name": "sysparm_view"
-          },{
+          },
+          {
             "displayName": "Sysparm Input Display Value",
             "style": "body",
             "type": "string",
             "name": "sysparm_input_display_value"
-          }],
-        "url": "https://myinstance.service-now.com/api/now/v1/table/:tableName/:sys_id"
+          }
+        ],
+        "url": "https://:instance.service-now.com/api/now/v1/table/:tableName/:sys_id"
       },
       {
         "path": "/api/now/v1/table/:tableName/:sys_id",
         "displayName": "Deletes Specified Record For Specified Table",
         "doc": {
-          "url": "https://myinstance.service-now.com/api/now/v1/table/:tableName/:sys_id"
+          "url": "https://:instance.service-now.com/api/now/v1/table/:tableName/:sys_id"
         },
         "httpMethod": "Delete",
-        "params": [{
+        "params": [
+          {
             "displayName": "ID",
             "style": "body",
             "type": "string",
             "name": "id",
             "required": true
-          },{
+          },
+          {
             "displayName": "Doc",
             "style": "body",
             "type": "string",
             "name": "doc"
-          },{
+          },
+          {
             "displayName": "Values",
             "style": "body",
             "type": "array",
             "name": "values"
-          }],
-        "url": "https://myinstance.service-now.com/api/now/v1/table/:tableName/:sys_id"
+          }
+        ],
+        "url": "https://:instance.service-now.com/api/now/v1/table/:tableName/:sys_id"
       },
       {
         "path": "/api/now/v1/table/incident",
         "displayName": "Create An Incident Record",
         "doc": {
-          "url": "https://myinstance.service-now.com/api/now/v1/table/incident"
+          "url": "https://:instance.service-now.com/api/now/v1/table/incident"
         },
-        "httpMethod": "Post",
+        "httpMethod": "POST",
         "params": [],
-        "url": "https://myinstance.service-now.com/api/now/v1/table/incident"
+        "url": "https://:instance.service-now.com/api/now/v1/table/incident"
       },
       {
         "path": "/api/now/v1/table/incident/:sys_id",
         "displayName": "Get The Inserted Incident",
         "doc": {
-          "url": "https://myinstance.service-now.com/api/now/v1/table/incident/:sys_id"
+          "url": "https://:instance.service-now.com/api/now/v1/table/incident/:sys_id"
         },
-        "httpMethod": "Get",
-        "params": [{
-            "displayName": "SYS ID",
-            "style": "URL",
-            "type": "string",
-            "name": ":sys_id",
-            "required": true
-          }],
-        "url": "https://myinstance.service-now.com/api/now/v1/table/incident/:sys_id"
-      },
-      {
-        "path": "/api/now/v1/table/incident/:sys_id",
-        "displayName": "Update The Incident",
-        "doc": {
-          "url": "https://myinstance.service-now.com/api/now/v1/table/incident/:sys_id"
-        },
-        "httpMethod": "Put",
-        "curl": "curl -X ",
-        "params": [{
-            "displayName": "SYS ID",
-            "style": "URL",
-            "type": "string",
-            "name": ":sys_id",
-            "required": true
-          },{
-            "displayName": "Sysparm Exclude Ref Link",
-            "style": "body",
-            "type": "boolean",
-            "name": "sysparm_exclude_ref_link"
-          }],
-        "url": "https://myinstance.service-now.com/api/now/v1/table/incident/:sys_id"
-      },
-      {
-        "path": "/api/now/v1/table/incident/:sys_id",
-        "displayName": "Delete The Incident",
-        "doc": {
-          "url": "https://myinstance.service-now.com/api/now/v1/table/incident/:sys_id"
-        },
-        "httpMethod": "Delete",
-        "curl": "curl -X ",
+        "httpMethod": "GET",
         "params": [
           {
             "displayName": "SYS ID",
@@ -357,33 +367,57 @@
             "required": true
           }
         ],
-        "url": "https://myinstance.service-now.com/api/now/v1/table/incident/:sys_id"
+        "url": "https://:instance.service-now.com/api/now/v1/table/incident/:sys_id"
+      },
+      {
+        "path": "/api/now/v1/table/incident/:sys_id",
+        "displayName": "Update The Incident",
+        "doc": {
+          "url": "https://:instance.service-now.com/api/now/v1/table/incident/:sys_id"
+        },
+        "httpMethod": "PUT",
+        "params": [
+          {
+            "displayName": "SYS ID",
+            "style": "URL",
+            "type": "string",
+            "name": ":sys_id",
+            "required": true
+          },
+          {
+            "displayName": "Sysparm Exclude Ref Link",
+            "style": "body",
+            "type": "boolean",
+            "name": "sysparm_exclude_ref_link"
+          }
+        ],
+        "url": "https://:instance.service-now.com/api/now/v1/table/incident/:sys_id"
+      },
+      {
+        "path": "/api/now/v1/table/incident/:sys_id",
+        "displayName": "Delete The Incident",
+        "doc": {
+          "url": "https://:instance.service-now.com/api/now/v1/table/incident/:sys_id"
+        },
+        "httpMethod": "Delete",
+        "params": [
+          {
+            "displayName": "SYS ID",
+            "style": "URL",
+            "type": "string",
+            "name": ":sys_id",
+            "required": true
+          }
+        ],
+        "url": "https://:instance.service-now.com/api/now/v1/table/incident/:sys_id"
       },
       {
         "path": "/api/now/import:TableName",
         "displayName": "Inserts New Record Into the Import Set Staging Table",
         "doc": {
-          "url": "https://myinstance.service-now.com/api/now/import/:TableName"
+          "url": "https://:instance.service-now.com/api/now/import/:TableName"
         },
-        "httpMethod": "Post",
-        "curl": "curl -X ",
-        "params": [{
-            "displayName": "Table Name",
-            "style": "URL",
-            "type": "string",
-            "name": ":TableName",
-            "required": true
-          }],
-        "url": "https://myinstance.service-now.com/api/now/import/:TableName"
-      },
-      {
-        "path": "/api/now/v1/table/:tableName/:sys_id",
-        "displayName": "Create Entity Expression",
-        "doc": {
-          "url": "https://myinstance.service-now.com/api/now/v1/table/:tableName/:sys_id"
-        },
-        "httpMethod": "Get",
-        "curl": "curl -X ",
+        "httpMethod": "POST",
         "params": [
           {
             "displayName": "Table Name",
@@ -391,7 +425,26 @@
             "type": "string",
             "name": ":TableName",
             "required": true
-          },{
+          }
+        ],
+        "url": "https://:instance.service-now.com/api/now/import/:TableName"
+      },
+      {
+        "path": "/api/now/v1/table/:tableName/:sys_id",
+        "displayName": "Create Entity Expression",
+        "doc": {
+          "url": "https://:instance.service-now.com/api/now/v1/table/:tableName/:sys_id"
+        },
+        "httpMethod": "GET",
+        "params": [
+          {
+            "displayName": "Table Name",
+            "style": "URL",
+            "type": "string",
+            "name": ":TableName",
+            "required": true
+          },
+          {
             "displayName": "Sys ID",
             "style": "URL",
             "type": "string",
@@ -399,7 +452,7 @@
             "required": true
           }
         ],
-        "url": "https://myinstance.service-now.com/api/now/v1/table/:tableName/:sys_id"
+        "url": "https://:instance.service-now.com/api/now/v1/table/:tableName/:sys_id"
       }
     ]
   }
