Toggle NODE_ENV on branch in travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,9 +9,10 @@ cache:
   directories:
     - node_modules
     - public/lib
-env: NODE_ENV=test
 notifications:
   flowdock: e7454f5285e7b9ab67009802d5560490
+before_script: 
+  if [ ${TRAVIS_BRANCH} == master ]; then export NODE_ENV=production; else export NODE_ENV=staging; fi
 before_deploy: "mkdir -p build && tar czf build/public.tar.gz public"
 deploy:
   # production
