--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ before_script:
   - node_modules/.bin/npm rebuild # Uncomment this if bcrypt gives you trouble.
   - node_modules/.bin/bower install
   - node_modules/.bin/gulp
+  - export NODE_ENV=test
 after_success:
   - gem install nokogiri -- --use-system-libraries
 before_deploy: "mkdir -p build && tar czf build/public.tar.gz public"
