--- a/package.json
+++ b/package.json
@@ -116,7 +116,7 @@
     "karma-blink1-reporter": "git://github.com/iamruinous/karma-blink1-reporter",
     "karma-chai-plugins": "~0.2.3",
     "karma-coffee-preprocessor": "^0.2.1",
-    "karma-growl-reporter": "~0.1.1",
+    "karma-growl-reporter": "^0.1.1",
     "karma-mocha": "~0.1.6",
     "karma-ng-html2js-preprocessor": "~0.1.0",
     "karma-osx-reporter": "^0.1.0",
