--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "connect-flash": "~0.1.1",
     "connect-nedb-session": "0.0.3",
     "connect-redis": "^2.0.0",
-    "cookie-parser": "~1.3.2",
+    "cookie-parser": "^1.3.4",
     "cors": "^2.5.3",
     "coveralls": "^2.7.1",
     "debug": "^2.1.1",
