--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "author": "Octoblu Inc.",
   "dependencies": {
     "airbrake": "^0.3.8",
-    "appdynamics": "^4.0.3",
+    "appdynamics": "*",
     "async": "^0.9.0",
     "bcrypt": "^0.8.0",
     "body-parser": "~1.5.0",
