--- a/bower.json
+++ b/bower.json
@@ -61,7 +61,8 @@
     "angular-intercom": "~2.0.4",
     "angular-chart.js": "~0.3.19",
     "angulartics": "~0.17.2",
-    "shepherd.js": "~0.6.14"
+    "shepherd.js": "~0.6.14",
+    "webcomponentsjs": "~0.6.0"
   },
   "devDependencies": {
     "chai": "~1.9.1",
