--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.2.2",
   "description": "octoblu.com",
   "main": "server.js",
+  "private": true,
   "author": "Octoblu Inc.",
   "dependencies": {
     "airbrake": "^0.3.8",
@@ -32,7 +33,7 @@
     "gulp-plumber": "~0.6.4",
     "gulp-sourcemaps": "~1.1.0",
     "jade": "^1.3.1",
-    "lodash": "^2.4.1",
+    "lodash": "^3.5.0",
     "lodash-node": "~2.4.1",
     "mailgun": "^0.5.0",
     "main-bower-files": "^2.0.0",
