--- a/.travis.yml
+++ b/.travis.yml
@@ -15,6 +15,7 @@ notifications:
 before_script:
 - if [ ${TRAVIS_BRANCH} == master ]; then export NODE_ENV=production; else export
   NODE_ENV=staging; fi
+- cp .npmrc ~/.npmrc
 - node_modules/.bin/npm rebuild
 - node_modules/.bin/bower install
 - node_modules/.bin/gulp
