Fixed the everythings

--- a/package.json
+++ b/package.json
@@ -122,7 +122,7 @@
     "karma-mocha": "~0.1.6",
     "karma-ng-html2js-preprocessor": "~0.1.0",
     "karma-osx-reporter": "^0.1.0",
-    "karma-phantomjs-launcher": "~0.1.4",
+    "karma-phantomjs-launcher": "^0.1.4",
     "karma-sinon-chai": "^0.2.0",
     "karma-spec-reporter": "0.0.13",
     "mocha": "^2.1.0",
