--- a/assets/json/nodetypes/channel/app.net.json
+++ b/assets/json/nodetypes/channel/app.net.json
@@ -2,6 +2,7 @@
   "_id": "53c9b83df400e177dca325d1",
   "category": "channel",
   "description": "One account. Many applications.",
+  "helpText": "One account. Many applications. Get instant access to hundreds of great social apps on iPhone, iPad, Android and more.",
   "enabled": true,
   "name": "App.net",
   "skynet": {
