--- a/assets/json/nodetypes/device/apple.json
+++ b/assets/json/nodetypes/device/apple.json
@@ -2,6 +2,7 @@
   "_id": "53c9b831f400e177dca325ae",
   "category": "device",
   "description": "Mobiblu iOS",
+  "helpText": "The Mobiblu app for iOS.",
   "enabled": false,
   "name": "Mobiblu iOS",
   "skynet": {
