--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   "author": "Octoblu Inc.",
   "dependencies": {
     "airbrake": "^0.3.8",
-    "appdynamics": "^4.0.4-local",
     "async": "^0.9.0",
     "bcrypt": "^0.8.0",
     "body-parser": "~1.5.0",
@@ -107,6 +106,9 @@
     "simple-oauth2": "~0.2.0",
     "underscore": "~1.6.0",
     "when": "^3.0.1"
+  },
+  "optionalDependencies": {
+    "appdynamics": "^4.0.4-local"
   },
   "devDependencies": {
     "bower": "^1.3.3",
