--- a/.jshintrc
+++ b/.jshintrc
@@ -1,7 +1,16 @@
 {
-  "strict": false,
+  "curly": true,
+  "eqeqeq": true,
+  "immed": true,
+  "latedef": true,
+  "newcap": true,
+  "noarg": true,
+  "sub": true,
   "undef": true,
-  "unused": false,
+  "unused": true,
+  "boss": true,
+  "eqnull": true,
+  "strict": false,
   "scripturl": true,
   "browser" : true,
   "node" : true,
