--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "airbrake": "^0.3.8",
     "async": "^0.9.0",
+    "basic-auth": "^1.0.0",
     "bcrypt": "^0.8.0",
     "body-parser": "^1.5.0",
     "browserify": "^4.2.0",
