--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "errorhandler": "^1.1.1",
     "express": "^4.6.1",
     "express-session": "^1.6.5",
+    "glob": "^5.0.3",
     "gulp": "^3.8.6",
     "gulp-bower": "0.0.6",
     "gulp-clean": "^0.3.1",
@@ -71,6 +72,7 @@
     "passport-nest": "^1.0.0",
     "passport-oauth": "^1.0.0",
     "passport-oauth2": "^1.1.2",
+    "passport-oauth2-refresh": "^0.4.0",
     "passport-octoblu": "^1.0.0",
     "passport-paypal": "^0.3.0",
     "passport-podio": "0.0.3",
