--- a/bower.json
+++ b/bower.json
@@ -62,7 +62,8 @@
     "angular-chart.js": "~0.3.19",
     "angulartics": "~0.17.2",
     "shepherd.js": "~0.6.14",
-    "MutationObservers": "Polymer/MutationObservers#~0.4.2"
+    "MutationObservers": "Polymer/MutationObservers#~0.4.2",
+    "angular-schema-form": "~0.8.0"
   },
   "devDependencies": {
     "chai": "~1.9.1",
