--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "main-bower-files": "^2.6.2",
     "marked": "^0.3.3",
     "meshblu": "^1.19.1",
+    "meshblu-http": "^1.0.1",
     "moment": "^2.5.1",
     "mongojs": "^0.15.1",
     "morgan": "^1.2.0",
