--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "debug": "^2.1.1",
     "errorhandler": "^1.1.1",
     "express": "^4.6.1",
+    "express-meshblu-healthcheck": "^1.0.0",
     "express-session": "^1.6.5",
     "glob": "^5.0.3",
     "gulp": "^3.8.6",
